feat(chat): parse and show online status in chat page
Closes #183

--- a/lib/i18n/en.i18n.json
+++ b/lib/i18n/en.i18n.json
@@ -520,7 +520,9 @@
     "title": "Chat",
     "hint": "Chat with $user",
     "success": "Sent successfully",
-    "failed": "Sent failed: $message"
+    "failed": "Sent failed: $message",
+    "online": "[Online]",
+    "offline": "[Offline]"
   },
   "imageDetailPage": {
     "title": "Image Detail"
