feat(post_card): add open in browser menu action
Closes #191

--- a/lib/i18n/en.i18n.json
+++ b/lib/i18n/en.i18n.json
@@ -641,7 +641,8 @@
         "offline": "Offline"
       }
     },
-    "share": "Copy share link"
+    "share": "Copy share link",
+    "openInBrowser": "Open in browser"
   },
   "packetCard": {
     "title": "Packet",
