--- a/lib/i18n/zh-CN.i18n.json
+++ b/lib/i18n/zh-CN.i18n.json
@@ -641,7 +641,8 @@
         "offline": "离线"
       }
     },
-    "share": "复制分享链接"
+    "share": "复制分享链接",
+    "openInBrowser": "在浏览器中打开"
   },
   "packetCard": {
     "title": "红包",
