feat(thraed): polish operation log style

--- a/lib/i18n/en.i18n.json
+++ b/lib/i18n/en.i18n.json
@@ -366,7 +366,10 @@
     "needLogin": "Need login",
     "replySuccess": "Reply success",
     "replyFailed": "Failed to reply: $err",
-    "draft": "Draft"
+    "draft": "Draft",
+    "operationLog": {
+      "title": "Operation Log"
+    }
   },
   "noticePage": {
     "title": "Notifications",
