feat: recognize poll area
Add information about poll in floor.

Closes #194

--- a/lib/i18n/en.i18n.json
+++ b/lib/i18n/en.i18n.json
@@ -777,5 +777,10 @@
   "packetDetailPage": {
     "title": "Packet details",
     "statistics": "${users: int} users got ${coins: int} coins in ${time: String}"
+  },
+  "pollCard": {
+    "title": "Poll",
+    "detail": "This floor contains poll, open in browser to participate in",
+    "openInBrowser": "Open in browser"
   }
 }
