--- a/lib/i18n/zh-CN.i18n.json
+++ b/lib/i18n/zh-CN.i18n.json
@@ -777,5 +777,10 @@
   "packetDetailPage": {
     "title": "红包详情",
     "statistics": "在 ${time: String} 中有 ${users: int} 名用户获得共 ${coins: int} 个天使币"
+  },
+  "pollCard": {
+    "title": "投票",
+    "detail": "此楼层包含投票，在浏览器中打开以参加投票",
+    "openInBrowser": "在浏览器中打开"
   }
 }
