fix(settings): polish error message when switch account failed
Fixes: #109

--- a/lib/i18n/en.i18n.json
+++ b/lib/i18n/en.i18n.json
@@ -265,7 +265,8 @@
       "uid": "UID",
       "email": "Email"
     },
-    "signUpHint": "Do not have an account? Sign up here"
+    "signUpHint": "Do not have an account? Sign up here",
+    "perhapsExpired": "Login failed, perhaps identity expired, please login again"
   },
   "rootPage": {
     "initFailed": "Init failed: $err",
