feat!: part of multi-user target again
This commit prepared part of the multi-user feature.

The switch user dialog was replaced by manage account page, but the
functionality is broken now.

Things to do next:

* Login with v2 API.
* Check login state with v2 API.
* Add mutex on race area: user state, cookie, and notification.

--- a/lib/i18n/en.i18n.json
+++ b/lib/i18n/en.i18n.json
@@ -55,12 +55,7 @@
     "title": "Settings",
     "accountSection": {
       "title": "Account",
-      "mgmt": "Account management",
-      "switchAccount": "Switch account",
-      "switchSuccess": "Switch success",
-      "loginAnother": "Login another account",
-      "logout": "Logout",
-      "online": "Online"
+      "mgmt": "Manage account"
     },
     "appearanceSection": {
       "title": "Appearance",
@@ -784,5 +779,15 @@
     "title": "Poll",
     "detail": "This floor contains poll, open in browser to participate in",
     "openInBrowser": "Open in browser"
+  },
+  "manageAccountPage": {
+    "title": "Manage account",
+    "switchAccount": {
+      "title": "Switch account",
+      "success": "Switch success"
+    },
+    "loginAnother": "Login another account",
+    "logout": "Logout",
+    "online": "Online"
   }
 }
