feat(thread): check and show soft closed state

--- a/lib/i18n/en.i18n.json
+++ b/lib/i18n/en.i18n.json
@@ -365,7 +365,8 @@
     "draft": "Draft",
     "operationLog": {
       "title": "Operation Log"
-    }
+    },
+    "softCloseHint": "Thread is closed, be attention before posting"
   },
   "noticePage": {
     "title": "Notifications",
