--- a/lib/i18n/zh-TW.i18n.json
+++ b/lib/i18n/zh-TW.i18n.json
@@ -365,7 +365,8 @@
     "draft": "草稿",
     "operationLog": {
       "title": "操作記錄"
-    }
+    },
+    "softCloseHint": "帖子已关闭，回复前请注意"
   },
   "noticePage": {
     "title": "通知",
