fix(notification): basic notice search

--- a/lib/i18n/en.i18n.json
+++ b/lib/i18n/en.i18n.json
@@ -411,6 +411,19 @@
       "copyRawContent": "Copy raw content"
     }
   },
+  "noticeSearchPage": {
+    "title": "Search notice",
+    "filter": "Filter",
+    "time": "Time",
+    "user": "User",
+    "text": "Content",
+    "clearAll": "Clear all",
+    "type": {
+      "notice": "Notice",
+      "bm": "Broadcast message",
+      "pm": "Personal message"
+    }
+  },
   "searchPage": {
     "title": "Search",
     "noThreadFound": "No thread found",
