feat(editor): allow auto deciding single side length
This commit added permissive image size auto-deciding process.
Allow single size to be `0` and auto decided when rendering.

--- a/lib/i18n/en.i18n.json
+++ b/lib/i18n/en.i18n.json
@@ -704,7 +704,9 @@
       "height": "Height",
       "errorInvalidNumber": "Invalid number",
       "autoFillSize": "Auto fill size",
-      "autoFillSizeDetail": "Fill size with image real size"
+      "autoFillSizeDetail": "Fill size with image real size",
+      "auto": "Auto",
+      "autoSingleDirectionSize": "If would like a auto decided width or height according to image size, check boxes right to width or height above."
     },
     "userMention": {
       "title": "Mention Someone",
