docs: update description

--- a/lib/i18n/en.i18n.json
+++ b/lib/i18n/en.i18n.json
@@ -222,7 +222,7 @@
   "aboutPage": {
     "title": "About",
     "whatIsThis": "What's This",
-    "description": "Third-party cross-platform client for TSDM forum",
+    "description": "Official cross-platform client for TSDM forum",
     "packageName": "Package Name",
     "forumHomepage": "Forum Homepage",
     "homepage": "App Homepage",
