--- a/lib/i18n/zh-CN.i18n.json
+++ b/lib/i18n/zh-CN.i18n.json
@@ -222,7 +222,7 @@
   "aboutPage": {
     "title": "关于",
     "whatIsThis": "这是？",
-    "description": "天使动漫论坛第三方跨平台客户端",
+    "description": "天使动漫论坛官方跨平台客户端",
     "packageName": "包名",
     "forumHomepage": "论坛主页",
     "homepage": "软件主页",
