--- a/lib/i18n/zh-TW.i18n.json
+++ b/lib/i18n/zh-TW.i18n.json
@@ -222,7 +222,7 @@
   "aboutPage": {
     "title": "關於",
     "whatIsThis": "這是？",
-    "description": "天使動漫論壇第三方跨平台客戶端",
+    "description": "天使動畫論壇官方跨平台客戶端",
     "packageName": "包名",
     "forumHomepage": "論壇首頁",
     "homepage": "軟體首頁",
