--- a/lib/i18n/zh-CN.i18n.json
+++ b/lib/i18n/zh-CN.i18n.json
@@ -496,7 +496,7 @@
     "newThreadTitle": "新帖子",
     "newPostTitle": "新回复",
     "threadType": "帖子分类",
-    "threadTitle": "帖子标题",
+    "title": "标题",
     "body": "正文",
     "additionalOptions": "附加选项",
     "publish": "发布",
@@ -526,6 +526,10 @@
       "entryTooltip": "设置帖子售价",
       "maximum": "最高价格 ${maxPrice: int}",
       "invalidPrice": "价格无效"
+    },
+    "whyTitleDialog": {
+      "title": "为什么这有个标题？",
+      "detail": "如果在发布新帖子或者编辑帖子一楼，有个标题很正常。\n但实际上其他楼层也都有个“标题”，可以在楼层正文之前加些<h2>样式的文字"
     }
   },
   "chatHistoryPage": {
