--- a/lib/i18n/zh-TW.i18n.json
+++ b/lib/i18n/zh-TW.i18n.json
@@ -642,6 +642,13 @@
     "edit": "編輯",
     "lastEditInfo": "本帖最後由 $username 於 $time 編輯",
     "profileDialog": {
+      "tabName": {
+        "info": "訊息",
+        "medals": "勳章",
+        "signature": "簽名"
+      },
+      "noMedal": "沒有勳章",
+      "noSig": "沒有簽名",
       "group": "使用者群組",
       "title": "頭銜",
       "recommended": "精華",
