feat: parse points change events
This commit added process to parse and show user points changes along
with user actions. To avoid a second snack bar, the message is displayed
on the top of screen, not bottom.

--- a/lib/i18n/en.i18n.json
+++ b/lib/i18n/en.i18n.json
@@ -898,5 +898,17 @@
     },
     "alreadyLatest": "Already latest version",
     "failed": "Failed to check update"
+  },
+  "pointsChangesDialog": {
+    "sep": ",",
+    "points": {
+      "ww": "ww ${value: String}",
+      "tsb": "tsb ${value: String}",
+      "xc": "xc ${value: String}",
+      "tr": "tr ${value: String}",
+      "fh": "fh ${value: String}",
+      "jl": "jl ${value: String}",
+      "specialAttr": "special points ${value: String}"
+    }
   }
 }
