feat: add update check config and delay
* Added config for the update check on app startup.
* Added delay before check for updates when app startup.
* Update update available dialog size.

--- a/lib/i18n/en.i18n.json
+++ b/lib/i18n/en.i18n.json
@@ -213,6 +213,7 @@
       "title": "Others",
       "about": "About",
       "update": "Get updates",
+      "updateCheckOnStartup": "Check update when app startup",
       "changelog": "Changelog"
     }
   },
