--- a/lib/i18n/zh-TW.i18n.json
+++ b/lib/i18n/zh-TW.i18n.json
@@ -651,7 +651,23 @@
     "expandLess": "折疊"
   },
   "colorPickerDialog": {
-    "title": "選擇顏色"
+    "title": "選擇顏色",
+    "tabs": {
+      "normal": {
+        "title": "簡單"
+      },
+      "advanced": {
+        "title": "高級",
+        "selectColor": "選擇顏色",
+        "selectColorShade": "選擇顏色色調"
+      },
+      "custom": {
+        "title": "自訂",
+        "colorValue": "顏色",
+        "invalidColor": "無效的顏色",
+        "formatTip": "輸入顏色的名字（例如darkorange、DarkOrange）或hex形式的顏色數值（例如f0c、ff00cc、14d084）"
+      }
+    }
   },
   "postCard": {
     "reply": "回覆",
